# vision

./: CMakeLists.txt  README.md  demo.py  package.xml
configs/: basketball.cfg  basketball.names  basketball_final.cfg  basketball_v4.cfg  basketball_v4_5class.cfg  basketball_v4_5class.names  config.xml  cylinder_params_find.py  out_camera_data.yml
data/: deploy.prototxt
include/: class_detector.h  hokuyo_node.h
include/object_detect/: cylinderdata.h  cylinderdataRequest.h  cylinderdataResponse.h  volleyballdata.h  volleyballdataRequest.h  volleyballdataResponse.h
src/: Client.cpp  Judge.cpp  Judge.h  PointCloudJudge.cpp  PointCloudJudge.h  camVision.cpp  camVision.h  camVisionClient.cpp  cylinderFindImage.cpp  cylinderFindImage.h  faster_rcnn.cpp  faster_rcnn.h  findobject.cpp  findobject.cpp~  findobject.h  main.cpp  main.cpp~  ssd_detect.cpp  ssd_detect.h  yolo.cpp  yolo_config_parser.cpp
srv/: cylinderdata.srv  cylinderdata.srv~  volleyballdata.srv  volleyballdata.srv~
testusbcap/: CMakeLists.txt
testusbcap/include/: usb_capture.h  usb_capture_with_opencv.h  usb_capture_with_thread.h
testusbcap/src/: main.cpp
testvision/src/driver_common-indigo-devel/driver_base/include/driver_base/: driver.h
testvision/src/hokuyo_node-indigo-devel/: CMakeLists.txt  hokuyo_test.rviz
testvision/src/hokuyo_node-indigo-devel/include/hokuyo_node/: hokuyo.h
testvision/src/hokuyo_node-indigo-devel/src/: hokuyo.cpp  hokuyo_node.cpp  hokuyo_node.h  main.cpp
testvision/src/vision/: CMakeLists.txt
testvision/src/vision/src/: detector.cpp  detector.h  get_rects.cpp  get_rects.h  improcess.cpp  improcess.h  main.cpp  max_profile.cpp  max_profile.h  network.cpp  network.h  range_cut.cpp  range_cut.h
